# partialfkr

./: .clang-format  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
Resources/: license.rtf
Resources/MacOS/: PartialFKR.entitlements
Resources/icons/: PartialFKR.icns
Source/: Main.cpp
Source/Analysis/: Analyzer.cpp  Analyzer.h  PartialData.cpp  PartialData.h
Source/Dev/: ScreenshotHelper.h
Source/Export/: AudioExporter.cpp  AudioExporter.h  CsoundExporter.cpp  CsoundExporter.h  JsonExporter.cpp  JsonExporter.h  MidiExporter.cpp  MidiExporter.h  MidiPackageExporter.cpp  MidiPackageExporter.h  SdifExporter.cpp  SdifExporter.h  SuperColliderExporter.cpp  SuperColliderExporter.h
Source/Model/: AmplitudeOps.cpp  AmplitudeOps.h  EditHistory.cpp  EditHistory.h  PfkrFormat.cpp  PfkrFormat.h  Project.cpp  Project.h  ReductionController.cpp  ReductionController.h  Selection.cpp  Selection.h
Source/Synthesis/: PartialSynth.cpp  PartialSynth.h
Source/UI/: AboutComponent.cpp  AboutComponent.h  AudioExportDialog.cpp  AudioExportDialog.h  CommandIDs.h  InspectorPanel.cpp  InspectorPanel.h  Juce2DRenderer.cpp  Juce2DRenderer.h  LevelMeter.cpp  LevelMeter.h  MacProxyIcon.cpp  MacProxyIcon.h  MacProxyIcon.mm  MacWindowHelpers.cpp  MacWindowHelpers.h  MacWindowHelpers.mm  MainComponent.cpp  MainComponent.h  PartialFKRLookAndFeel.h  PartialRenderer.h  PartialView.cpp  PartialView.h  ReductionPanel.cpp  ReductionPanel.h  SideTabBar.cpp  SideTabBar.h  ToolsPanel.cpp  ToolsPanel.h  TransportBar.cpp  TransportBar.h  ZoomButton.h
Tests/: EditHistoryTests.cpp  PartialDataTests.cpp  PfkrFormatTests.cpp  ProjectTests.cpp  SelectionTests.cpp
docs/: CROSS_PLATFORM.md  DESIGN.md  DISTRIBUTION.md  FEATURES.md  LARGE_FILE_STRATEGY.md  MANUAL.md  MANUAL_PLAN.md  UI_POLISH.md  manual.css
docs/screenshots/auto/: manifest.md
packaging/linux/: postinst  postrm
packaging/macos/: dmgbuild-settings.py  make-dmg.sh  requirements.txt  test-hdiutil.sh
packaging/windows/: fileassoc.nsh  fileassoc_uninstall.nsh
scripts/: distribute.sh
src/: config.h
